[gd_scene load_steps=17 format=2]

[ext_resource path="res://ObjectNodes/Items/Cannon/CannonItem.gd" type="Script" id=1]
[ext_resource path="res://ObjectNodes/GeneralCannonAssets/CannonBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://ObjectNodes/Items/Sounds/ItemPlaceAudio.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObjectNodes/Items/Cannon/MaterialSmoke.tres" type="Material" id=4]
[ext_resource path="res://ObjectNodes/Items/Cannon/cannon2.png" type="Texture" id=5]
[ext_resource path="res://ObjectNodes/GeneralCannonAssets/Sounds/Cannon6.wav" type="AudioStream" id=6]
[ext_resource path="res://ObjectNodes/GeneralCannonAssets/Sounds/Cannon7.wav" type="AudioStream" id=7]
[ext_resource path="res://ObjectNodes/Items/Cannon/ParticleFlash.tres" type="Material" id=8]
[ext_resource path="res://ObjectNodes/Items/Cannon/trajectoryPoint.png" type="Texture" id=9]
[ext_resource path="res://ObjectNodes/Items/Cannon/WaterHitRing.png" type="Texture" id=10]
[ext_resource path="res://ObjectNodes/GeneralCannonAssets/Sounds/Cannon4.wav" type="AudioStream" id=11]
[ext_resource path="res://ObjectNodes/GeneralCannonAssets/Sounds/390182__eardeer__explosion.wav" type="AudioStream" id=12]
[ext_resource path="res://ObjectNodes/Items/Cannon/CannonInfoBox.tscn" type="PackedScene" id=14]
[ext_resource path="res://ObjectNodes/Items/Cannon/ParticleSmoke.tres" type="Material" id=15]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 5, 5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.179145, 0.128, 0.135657 )

[node name="Large Cannon" type="KinematicBody"]
collision_layer = 16385
collision_mask = 16385
script = ExtResource( 1 )
databaseName = "Large Cannon"
InfoPanel = ExtResource( 14 )
BallScene = ExtResource( 2 )
force = 0.5

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -3.03305e-08, 0, -0.16642, 0, 0.107569, 0, 0.186168, 0, -2.71132e-08, 0.139893, 0.0516319, -0.0031288 )
axis = 1
shaded = true
alpha_cut = 2
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": "e"
}

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0211141, 0, 0.00772725 )
material_override = ExtResource( 4 )
cast_shadow = 0
emitting = false
amount = 10
lifetime = 10.0
one_shot = true
explosiveness = 0.99
randomness = 0.5
visibility_aabb = AABB( -12.4603, -11.3428, -12.1673, 24.0185, 24.4136, 25.9985 )
local_coords = false
process_material = ExtResource( 15 )
draw_pass_1 = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="ParticlesFlash" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.641374, 0, 0.00772725 )
material_override = ExtResource( 4 )
cast_shadow = 0
emitting = false
amount = 10
lifetime = 0.41
one_shot = true
explosiveness = 0.8
randomness = 0.46
visibility_aabb = AABB( -16.2281, -14.8935, -9.3849, 31.5542, 31.5149, 20.4338 )
local_coords = false
process_material = ExtResource( 8 )
draw_pass_1 = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="TrajectoryMarkerGroup" type="Spatial" parent="."]
__meta__ = {
"_editor_description_": "Groups all markers together for easy acces in code.
DONT MOVE OR SCALE!
Number of Sprites automatically sets number of Line sampling points
"
}

[node name="Marker" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.00273146, 0, -0.00533216 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker2" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker3" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker4" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker5" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker6" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker7" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker8" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker9" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker10" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker11" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker12" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker13" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker14" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker15" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker16" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker17" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker18" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker19" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker20" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker21" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker22" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker23" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker24" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker25" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker26" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker27" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker28" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker29" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="Marker30" type="Sprite3D" parent="TrajectoryMarkerGroup"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
axis = 1
alpha_cut = 2
texture = ExtResource( 9 )

[node name="WaterHitMarker" type="Sprite3D" parent="."]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -0.014818, -0.00728416, -0.0247557 )
pixel_size = 0.02
axis = 1
alpha_cut = 2
texture = ExtResource( 10 )

[node name="FakeBullet" type="Spatial" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Audio1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 11.098
unit_size = 14.0
max_db = 6.0
pitch_scale = 0.81
max_distance = 250.0
doppler_tracking = 2

[node name="Audio2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 12 )
unit_db = 15.0
unit_size = 14.0
max_db = 6.0
pitch_scale = 0.91
max_distance = 250.0
doppler_tracking = 2

[node name="Audio3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 15.0
unit_size = 14.0
max_db = 6.0
pitch_scale = 1.16
max_distance = 250.0
doppler_tracking = 2

[node name="Audio4" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 11 )
unit_db = 15.0
unit_size = 14.0
max_db = 6.0
pitch_scale = 0.86
max_distance = 250.0
doppler_tracking = 2

[node name="Audio5" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_db = 15.0
unit_size = 14.0
max_db = 6.0
pitch_scale = 0.65
max_distance = 250.0
doppler_tracking = 2

[node name="PlaceAudio" parent="." instance=ExtResource( 3 )]
